--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ html {
   background-color: #6fc276;
   text-align: center;
 }
+
+.aboutus {
+  text-align: left;
+}
+
+.goals {
+  text-align: right;
+}
