--- a/Styles.css
+++ b/Styles.css
@@ -6,3 +6,13 @@ html {
 .person p {
   display: inline-block;
 }
+
+.members {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.
