--- a/Styles.css
+++ b/Styles.css
@@ -15,4 +15,15 @@ html {
   padding-right: 20px;
 }
 
-.
+
+.name {
+  text-align: left;
+}
+
+.tel {
+  text-align: center;
+}
+
+.uid {
+  text-align: right;
+}
