--- a/Styles.css
+++ b/Styles.css
@@ -11,8 +11,7 @@ html {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 20px;
 }
 
 
