--- a/style.css
+++ b/style.css
@@ -18,14 +18,17 @@ html {
 
 .name {
   text-align: left;
+  width: 25%;
 }
 
 .tel {
   text-align: center;
+  width: 40%;
 }
 
 .uid {
   text-align: right;
+  width: 35%;
 }
 
 a {
