--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ a:active {
 .dividing-line {
   background: linear-gradient(90deg, #ff007f, #00d5d6);
   height: 5px;
+  border: 1px;
   width: 65%;
 }
   
